fixed state change button position on smaller screens

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body{
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: .5rem;
     margin: 2rem;
+    min-width: 40%;
+    max-width: 60%;
 }
 
 #title{
@@ -40,6 +42,8 @@ button{
     background: rgba(0, 0, 0, .1);
     border: none;
     padding: .5rem;
+    margin: .5rem;
+    
 }
 
 #next.inactive{
@@ -73,6 +77,10 @@ button{
     cursor: pointer;
     
 }
+
+/* .type-selector{
+    display: flex;
+} */
 
 .my-modal{
     display: none;
